--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -11,7 +11,7 @@
     tex2jax: {
       inlineMath: [ ['$','$'] ],
       displayMath: [ ['$$','$$'] ],
-      processEscapes: true,
+      processEscapes: true
     }
   });
 </script>
