--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -1,5 +1,13 @@
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
+        TeX: {
+          equationNumbers: {
+            autoNumber: "AMS"
+          }
+        },
+        SVG: {
+          scale: 90
+        },
       tex2jax: {
         inlineMath: [ ['$','$'], ["\\(","\\)"] ],
         processEscapes: true
